[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["http2"] }
firestore = { version = "0.32.2", default-features = false }
gcloud-sdk = { version = "0.20.6", default-features = false, features = ["tls-webpki-roots", "google-storage-v2"] }
hyper = { version = "0.14.27", features = ["full"] }
sentry = { version = "0.31.5", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls"] }
reqwest = "0.11"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.67"
tonic = { version = "0.9.2", default-features = false, features = ["tls-webpki-roots"] }
dotenv = "0.15.0"

